@@ -1,0 +1,28 @@
+#include <agar/core.h>
+#include <agar/gui.h>
+
+void
+agar_window_set_geometry_bounded (AG_Window *win, int x, int y, int w, int h)
+{
+  AG_WindowSetGeometryBounded (win, x, y, w, h);
+}
+
+void
+agar_window_set_geometry_aligned_percent (AG_Window *win,
+  enum ag_window_alignment alignment, int wPct, int hPct)
+{
+  AG_WindowSetGeometryAlignedPct (win, alignment, wPct, hPct);
+}
+
+void
+agar_window_set_geometry_aligned (AG_Window *win,
+  enum ag_window_alignment alignment, int w, int h)
+{
+  AG_WindowSetGeometryAligned (win, alignment, w, h);
+}
+
+void
+agar_window_set_geometry (AG_Window *win, int x, int y, int w, int h)
+{
+  AG_WindowSetGeometry (win, x, y, w, h);
+}
