@@ -1,1 +1,1 @@
-agar.gui.window agar-gui-window.ads
+agar.gui.window agar-gui-window.ads agar-gui-window.adb
