@@ -11,6 +11,7 @@ struct install_item insthier[] = {
   {INST_COPY, "ag_surface.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "ag_unit.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "ag_widget.c", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "ag_window.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-ada-conf.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-colors.ads", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-colors.ads", 0, ctxt_incdir, 0, 0, 0644},
@@ -52,6 +53,10 @@ struct install_item insthier[] = {
   {INST_COPY, "agar-gui-view.adb", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget.adb", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget.adb", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-gui-window.adb", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-gui-window.adb", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-gui.adb", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-gui.adb", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-colors.ali", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-colors.ali", 0, ctxt_incdir, 0, 0, 0444},
   {INST_COPY, "agar-gui-draw.ali", 0, ctxt_repos, 0, 0, 0644},
