@@ -1,1 +1,2 @@
 20080822 version: agar-gui-ada 0.1
+20080827 code: added window API.
